# webcodex

./: .env.example  .gitignore  README.md  start.ps1  环.html
backend/: requirements.txt
backend/app/: codex_relay.py  config.py  db.py  main.py  oss_store.py
docs/: PRD.md  agent-runtime-tooling-plan.md  official-python-sandbox-migration-plan.md  project-overview.html  streaming-resume-analysis.zh-CN.md
frontend/: .npm.sha256  index.html  main.js  package-lock.json  package.json  styles.css  vite.config.js
frontend/assets/: Blinking Square.lottie  thinking-blue.lottie
frontend/src/: main.jsx
frontend/src/components/markdown/: MarkdownRenderer.jsx
frontend/src/styles/: app.css  tokens.css
worker-node/: .npm.sha256  Dockerfile.agent-runtime  package-lock.json  package.json
worker-node/src/: attachments.mjs  model-provider.mjs  protocol.mjs  runtime-tool-mode.test.mjs  sdk-events.mjs  sdk-events.test.mjs  session.mjs  worker.mjs
worker-node/src/runtime/: docker-runtime.mjs  workspace-editor.mjs
worker-node/src/tools/: runtime-fallback.mjs  runtime-workspace.mjs  sandbox.mjs  view-tool2.mjs  workspace.mjs
worker-py/: Dockerfile.agent-runtime  pyproject.toml
worker-py/tests/: test_diff.py  test_sdk_events.py
worker-py/webcodex_worker/: __init__.py  attachments.py  backend_client.py  config.py  diff.py  events.py  main.py  paths.py  sandbox_runner.py  sdk_events.py  session.py  workspace_materializer.py
